# astute-backend

./: .gitignore  Makefile  app.py  consts.txt  deps.py  dump_receiver.py  goods.txt  graph.py  hypermarket.txt  ml_model.py  pyproject.toml  room.txt
recommendator/: base.py  dummy.py  old_urls.txt
recommender/: base.py  dummy.py
tracker/: dummy.py  yolo.py  zones.json
