[tool.poetry]
name = "astutebackend"
version = "0.1.0"
description = ""
authors = ["Max <makstislenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0.76"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
websockets = "^11.0.3"
asyncio = "^3.4.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
